# junk

./: .gitignore  Application.vala  CMakeLists.txt  Procfile  README.md  ajax.php  db_fill.php  db_fix.php  error.php  external-scripts.json  hubot-scripts.json  index-testing-with-limits.php  index.php  main.py  meson.build  nginx.conf  old-index.html  package.json  requirements.txt  snapcraft.yaml  style.css  user-specific-alternatives.vala
cmake/: Translations.cmake
css/: _bars.scss  _buttons.scss  _checkboxes-radios.scss  _containers.scss  _content-styles.scss  _footer.scss  _foundation.scss  _grid.scss  _icons.scss  _infobars.scss  _jquery-ui.min.scss  _nav.scss  _text-imports.scss  _textfields.scss  _typography.scss  _vars.scss
data/: Application.css  inspector.gresource.xml  io.elementary.sideload.desktop.in
debian/: README  README.Debian  README.source  changelog  control  copyright  install  lintian-overrides  postinst  prerm  rules
js/: elementary.js  foundation.min.js
results/: index.php  style.css
scripts/: cloudflare.coffee  github-hooks.coffee  jenkins.coffee  launchpad.coffee  welcome.coffee
src/: Application.vala  MainWindow.vala  Translations.cmake  index.php
src/Views/: ElementsView.vala  InstallView.vala  PropertiesView.vala  StylesView.vala  WarningView.vala
